[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "runtime-async-std-native-tls"]}
sqlx-mysql = "0.7.4"
runtime-tokio = "0.0.0"
rand = "0.8.5"
